git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1364 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/repventasnetasproductofactura/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/repventasnetasproductofactura/startup.vm
@@ -109,7 +109,7 @@
                                         <td>Familia</td>
                                         <td>&nbsp;</td>
                                         <td>&nbsp;</td>
-                                        <td>subfamilia</td>
+                                        <td>Subfamilia</td>
                                         <td>&nbsp;</td>
                                         <td colspan="3">Agente</td>
                                         <td>&nbsp;</td> <!--<input type="hidden" name="id_agente">-->
