--- a/erp-quimicos/src/main/webapp/css/modalbox/teschequera/formaTeschequera.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/teschequera/formaTeschequera.css
@@ -97,7 +97,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
 	width:610px;
-    height:355px;
+    height:300px;
 	border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -108,7 +108,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 .chequeras_div_two{
 	/*font-family:tahoma;*/
-    width:600px;
+    width:610px;
     height:28px;
     background-color:#454442;
 	margin-top:0;
@@ -123,7 +123,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .chequeras_div_three{
 	/*font-family:tahoma;*/
 	font-size:11px;
-    width:579px;
+    /*width:579px;*/
     /*height:180px;*/
     background-color:#e9e9e9;
     margin-top:5px;
