git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1380 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -302,7 +302,7 @@
 											<li>
 												<a href="#" class="sub">Reportes&raquo;</a>
 												<ul>
-													<li class="topline"><a href="../comrepbackorder/startup.agnux">Backorders</a></li>
+													<!--<li class="topline"><a href="../comrepbackorder/startup.agnux">Backorders</a></li>-->
 													<li class="topline"><a href="../invrepcomprasnetasporproducto/startup.agnux">Compras Netas por Producto</a></li>
 													<li class="topline"><a href="../repestadisticocompras/startup.agnux">Estad&iacute;stico de Compras</a></li>
 													<li class="topline"><a href="../comdiasentrega/startup.agnux">D&iacute;as de Entrega</a></li>
